k8s/Deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: node
  namespace: default
  labels:
    run: node
spec:
  replicas: 1
  selector:
    matchLabels:
      run: node
  template:
    metadata:
      labels:
        run: node
    spec:
      containers:
        - name: node
          image: gcr.io/mutantproject/appnode:v3
          ports:
            - containerPort: 80
              protocol: TCP
