k8s/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      
  selector:
    app.kubernetes.io/name: node
