k8s/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  name: node-ingress
  namespace: default
spec:
  rules:
    - host: "dev.mutant.usetestf.info"
      http:
        paths:
          - backend:
              serviceName: node
              servicePort: 80
            path: /
